--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon --exec babel-node ./src/server.js",
-    "start": "nodemon -r esm src/server.js",
+    "start": "nodemon src/server.js",
     "test": " cross-env NODE_ENV=test nyc --reporter=text --reporter=html mocha --require @babel/register src/test --timeout 10000 --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
